--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "predeploy": "react-scripts build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -47,6 +49,7 @@
     "devDependencies": {
         "babel-plugin-module-resolver": "^5.0.0",
         "customize-cra": "^1.0.0",
+        "gh-pages": "^5.0.0",
         "react-app-rewired": "^2.2.1",
         "sass": "^1.62.0"
     }
